# bbgo-dashboard

./: Dockerfile  README.md  app.py  pyproject.toml
bbgo_dashboard/: db.py  utils.py
bbgo_dashboard/assets/: __init__.py  assets.py  resources.py  trades.py
bbgo_dashboard/db/: __init__.py  model.py  utils.py
