[tool.poetry]
name = "bbgo-dashboard"
version = "0.1.0"
description = ""
authors = ["なるみ"]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
pymysql = "^1.0.3"
sqlalchemy = "^2.0.16"
dagster = "^1.3.10"
dagit = "^1.3.10"
plotly = "^5.15.0"
python-dotenv = "^1.0.0"
pandas = "^2.0.2"
loguru = "^0.7.0"
kaleido = "0.2.1"
streamlit = "^1.23.1"
jupyter = "^1.0.0"
quantstats = "^0.0.59"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
yapf = "^0.33.0"
toml = "^0.10.2"
pytest = "^7.3.1"
codecov = "^2.1.13"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.dagster]
module_name = "bbgo_dashboard.assets"
